Add light/dark mode theme toggle and update colors for light mode

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <div class="content-header">
                 <h2 id="currentViewTitle">오늘</h2>
                 <div class="header-actions">
+                    <button id="themeToggle" class="theme-toggle-btn" title="테마 전환">
+                        <span class="theme-icon">☀️</span>
+                    </button>
                     <span id="todoCount" class="todo-count">0개의 할일</span>
                 </div>
             </div>
