Firebase를 백엔드 API로 변경 및 UI 텍스트 수정
- Firebase Realtime Database 제거하고 백엔드 API(localhost:5000) 연동
- 할일 CRUD 작업을 백엔드 API로 변경 (GET, POST, PUT, DELETE)
- 폴더 기능은 로컬 스토리지로 변경
- 완료 상태(completed)를 로컬 스토리지에 저장하여 새로고침 후에도 유지
- 폴더 생성 시 자동 선택 기능 추가
- 웹사이트 타이틀 변경: 'Todoist - 할일 관리' → 'Todolist - 할 일 서비스'
- 로고 텍스트 변경: 'Todo' → 'Todolist'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todoist - 할일 관리</title>
+    <title>Todolist - 할 일 서비스</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
         <!-- 좌측 사이드바 -->
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <h1 class="logo" id="logo">Todo</h1>
+                <h1 class="logo" id="logo">Todolist</h1>
                 <button class="sidebar-close-btn" id="sidebarCloseBtn" aria-label="닫기">×</button>
             </div>
             
